# substrate-node-template

./: Cargo.toml  README.md  cargo-generate.toml
.github/workflows/: build-push-template.yml
node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
